--- a/hang/index.html
+++ b/hang/index.html
@@ -7,6 +7,6 @@
   <link type="text/css" href="css/hang.css"/>
 </head>
 <body>
-	<div class='apple'></div>
+	<div class='apple' id='apple'></div>
 </body>
 </html>
