--- a/hang/index.html
+++ b/hang/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<script src="js/hang.js"></script>
-  <link type="text/css" href="css/hang.css"/>
+  <link rel="stylesheet" href="css/hang.css" type="text/css"/>
 </head>
 <body>
 	<div class='apple' id='apple'></div>
